# crud-rust

rust_crud_api/: .env  Cargo.toml
rust_crud_api/migrations/2025-09-10-082057_create_products_table/: up.sql
rust_crud_api/src/: handlers.rs  main.rs  models.rs  schema.rs
